--- a/flask-app/food_desert/templates/base-address.html
+++ b/flask-app/food_desert/templates/base-address.html
@@ -33,27 +33,22 @@
        </div>
      </div>
      <div class="container">
-       <div style="padding: 30px;">
+       <div style="padding: 50px;">
          <div class="row">
            <div class="col-sm-2"></div>
-           <div class="col-sm-8">
-             <p class="text-secondary">To convert an address to latitude/longitude, click <a href="https://www.latlong.net/convert-address-to-lat-long.html" target="-blank">here</a></p>
-           </div>
-           <div class="col-sm-2"></div>
-        </div>
-       </div>
-     </div>
-     <div class="container">
-       <div style="padding: 30px;">
-         <div class="row">
-           <div class="col-sm-2"></div>
-           <div class="col-sm-4"><h4 class="text-secondary">Enter Coordinates</h4></div>
+           <div class="col-sm-4"><h4 class="text-secondary">Enter Address</h4></div>
            <div class="col-sm-4">
               <form>
                <div class="form-group">
-                 <label for="address">Latitude:</label>
+                 <label for="address">Street Address:</label>
                  <input type="address" class="form-control" id="address">
-                 <label for="address">Longitude:</label>
+                 <label for="address">Address Line 2:</label>
+                 <input type="address" class="form-control" id="address">
+                 <label for="address">City:</label>
+                 <input type="address" class="form-control" id="address">
+                 <label for="address">State:</label>
+                 <input type="address" class="form-control" id="address">
+                 <label for="address">Zip Code:</label>
                  <input type="address" class="form-control" id="address">
                  <button type="submit" style="margin-top: 10px;" class="btn btn-light">Submit</button>
                </div>
